--- a/css/style.css
+++ b/css/style.css
@@ -19,13 +19,7 @@ body {
     stroke: steelblue;
     stroke-width: 1.5px;
 }
-.section {
-    width: 96%;
-    text-align: left;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 5px;
-}
+
 .pictures {
     text-align: center
 }
@@ -46,50 +40,19 @@ body {
     width: 30%;
     height: 30%;
 }
-img {
-    max-width: 350px;
-    max-height: 350px;
-}
+
 .projectTitle {
     font-size: large;
 }
-.wrapper {
-    clear: both;
+
+.projectPic {
+    width: 50%;
+}
+
+.project {
+    border-top: 1px dotted;
     padding-top: 15px;
-    width: 70%;
-}
-.projectPhoto {
-    width: 50%;
-    float: left;
-}
-.projectDescrip {
-    width: 50%;
-    float: left;
-}
-@media screen and (max-width: 400px) {
-    .projectDescrip {
-        text-align: left;
-        float: none;
-        width: auto;
-    }
-    .projectPhoto {
-        float: none;
-        width: auto;
-        clear: left;
-        margin-left:0;
-        margin-right:0;
-    }
-
-    .wrapper {
-        clear: both;
-        padding-top: 15px;
-        width:auto;
-    }
-
-    img {
-        max-width: 100%;
-        max-height: 350px;
-    }
+    padding-bottom: 15px;
 }
 
 hr {
