--- a/css/style.css
+++ b/css/style.css
@@ -78,3 +78,24 @@ hr {
 svg text{
     pointer-events: none;
 }
+
+#introAnimation{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+
+#bigPhotoOfMe {
+  background-image: url('../strayer_1200x524.jpg');
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
