--- a/css/style.css
+++ b/css/style.css
@@ -78,3 +78,17 @@ hr {
 svg text{
     pointer-events: none;
 }
+
+#intro {
+    position:relative;;
+    height:100vh;
+}
+
+#introSvg, #randomWalkCanvas{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  /*z-index: 1;*/
+}
