--- a/css/style.css
+++ b/css/style.css
@@ -84,11 +84,20 @@ svg text{
     height:100vh;
 }
 
-#introSvg, #randomWalkCanvas{
+#randomWalkCanvas{
   width: 100%;
   height: 100%;
   position: absolute;
-  top: 0;
+  top: 7vh;
   left: 0;
-  /*z-index: 1;*/
+  z-index: -1;
+}
+
+#introSvg{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 7vh;
+  left: 0;
+  z-index: 1;
 }
