Switch to using quarto to build site.

--- a/styles.css
+++ b/styles.css
@@ -49,3 +49,11 @@ p {
 #contact {
   margin-top: 75px;
 }
+
+img {
+  max-width: 100%;
+}
+
+.cell-output-display:has(.html-widget) {
+  overflow: hidden;
+}
