--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,23 @@
-@import url('https://fonts.googleapis.com/css?family=PT+Sans|Raleway');
-
-h1, h2, h3 {
-  font-family: 'PT Sans', sans-serif;
+h1,
+h2,
+h3 {
+  font-family: ui-rounded, 'Hiragino Maru Gothic ProN', Quicksand, Comfortaa,
+    Manjari, 'Arial Rounded MT', 'Arial Rounded MT Bold', Calibri,
+    source-sans-pro, sans-serif;
+  font-weight: normal;
 }
 
-body {
-  font-family: 'Raleway', sans-serif;
-}
-
+body,
 p {
-  font-family: 'Raleway', sans-serif;
+  font-family: Avenir, Montserrat, Corbel, 'URW Gothic', source-sans-pro,
+    sans-serif;
+  font-weight: normal;
 }
-
-
 
 .photo_and_description {
   display: grid;
   grid-template-columns: 3fr 5fr;
-  justify-content: center;	
+  justify-content: center;
   grid-column-gap: 25px;
 }
 
@@ -25,9 +25,9 @@ p {
   .photo_and_description {
     display: grid;
     grid-template-columns: 100%;
-    justify-content: center;	
+    justify-content: center;
   }
-  
+
   .photo_and_description img {
     padding: 10px;
   }
@@ -36,7 +36,6 @@ p {
 .links {
   text-align: center;
 }
-
 
 #resumeButton {
   border: 1px solid black;
