--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -116,4 +116,7 @@
   body {
     @apply bg-background text-foreground;
   }
+  .project-description p a {
+    @apply text-blue-500 underline;
+  }
 }
