Reword and highlight hero and description

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -15,7 +15,7 @@ import RoughNotation from "./ui/RoughNotation.astro";
 <Section id="about">
   <SectionTitle>About me</SectionTitle>
     <p class="mt-4 leading-relaxed">
-      I am a <RoughNotation type="underline" color="var(--color-chart-5)">principal software engineer</RoughNotation> at <strong class="highlight-place">Posit</strong>, developing tools that enhance data scientists' workflows. My career spans multiple disciplines—from being a journalist at the <strong class="highlight-place">New York Times</strong> to a data scientist at <strong class="highlight-place">Johns Hopkins Data Science Lab</strong> and even a "data artist in residence" at a geospatial visualization startup.
+      At <strong class="highlight-place">Posit</strong>, I develop tools that enhance data scientists' workflows. My career spans multiple disciplines—from being a journalist at the <strong class="highlight-place">New York Times</strong> to a data scientist at <strong class="highlight-place">Johns Hopkins Data Science Lab</strong> and even a "data artist in residence" at a geospatial visualization startup.
     </p>
     <p class="mt-4 leading-relaxed">
       My <strong>Ph.D. from <span class="highlight-place">Vanderbilt University</span></strong> focused on <RoughNotation type="underline" color="var(--color-chart-5)">statistical methodologies for network data, deep learning, and data visualization.</RoughNotation> At the <strong class="highlight-place">University of Vermont</strong>, I studied statistics, mathematics, and computer science.
