Fix linkedin link!

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -21,7 +21,7 @@ import SectionTitle from './SectionTitle.astro';
       <a href="https://github.com/nstrayer" target="_blank" class="contact-link">
         <span class="icon"><Icon name="line-md:github" /></span> nstrayer
       </a>
-      <a href="https://linkedin.com/in/nicholasstrayer" target="_blank" class="contact-link">
+      <a href="https://linkedin.com/in/nickstrayer" target="_blank" class="contact-link">
         <span class="icon"><Icon name="line-md:linkedin" /></span> LinkedIn
       </a>
     </div>
